diesel_compile_tests/tests/fail/boxed_queries_and_group_by.stderr
error[E0277]: the trait bound `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::LimitOffsetClause<diesel::query_builder::NoLimitClause, diesel::query_builder::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>: diesel::query_dsl::boxed_dsl::BoxedDsl<'_, _>` is not satisfied
  --> $DIR/boxed_queries_and_group_by.rs:55:40
   |
55 |     users::table.group_by(users::name).into_boxed();
   |                                        ^^^^^^^^^^ the trait `diesel::query_dsl::boxed_dsl::BoxedDsl<'_, _>` is not implemented for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::LimitOffsetClause<diesel::query_builder::NoLimitClause, diesel::query_builder::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, LOf, G> as diesel::query_dsl::boxed_dsl::BoxedDsl<'a, DB>>

error[E0271]: type mismatch resolving `<users::columns::name as diesel::expression::IsContainedInGroupBy<users::columns::id>>::Output == diesel::expression::is_contained_in_group_by::Yes`
  --> $DIR/boxed_queries_and_group_by.rs:59:10
   |
59 |         .select(users::id)
   |          ^^^^^^ expected struct `diesel::expression::is_contained_in_group_by::No`, found struct `diesel::expression::is_contained_in_group_by::Yes`
   |
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<users::columns::name>` for `users::columns::id`
   = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<users::columns::id>` for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::LimitOffsetClause<diesel::query_builder::NoLimitClause, diesel::query_builder::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>`

error[E0277]: the trait bound `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::SelectClause<users::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::LimitOffsetClause<diesel::query_builder::NoLimitClause, diesel::query_builder::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>: diesel::query_dsl::boxed_dsl::BoxedDsl<'_, _>` is not satisfied
  --> $DIR/boxed_queries_and_group_by.rs:60:10
   |
60 |         .into_boxed();
   |          ^^^^^^^^^^ the trait `diesel::query_dsl::boxed_dsl::BoxedDsl<'_, _>` is not implemented for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::SelectClause<users::columns::id>, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::LimitOffsetClause<diesel::query_builder::NoLimitClause, diesel::query_builder::NoOffsetClause>, diesel::query_builder::group_by_clause::GroupByClause<users::columns::name>>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, LOf, G> as diesel::query_dsl::boxed_dsl::BoxedDsl<'a, DB>>

error[E0271]: type mismatch resolving `<users::columns::name as diesel::expression::IsContainedInGroupBy<users::columns::id>>::Output == diesel::expression::is_contained_in_group_by::Yes`
  --> $DIR/boxed_queries_and_group_by.rs:66:10
   |
66 |         .select(users::id)
   |          ^^^^^^ expected struct `diesel::expression::is_contained_in_group_by::No`, found struct `diesel::expression::is_contained_in_group_by::Yes`
   |
   = note: required because of the requirements on the impl of `diesel::expression::ValidGrouping<users::columns::name>` for `users::columns::id`
   = note: required because of the requirements on the impl of `diesel::query_dsl::select_dsl::SelectDsl<users::columns::id>` for `diesel::query_builder::BoxedSelectStatement<'_, diesel::sql_types::Text, users::table, _, users::columns::name>`

error[E0277]: the trait bound `diesel::query_builder::BoxedSelectStatement<'_, diesel::sql_types::Text, users::table, _, users::columns::name>: diesel::Table` is not satisfied
  --> $DIR/boxed_queries_and_group_by.rs:73:10
   |
73 |         .inner_join(posts::table)
   |          ^^^^^^^^^^ the trait `diesel::Table` is not implemented for `diesel::query_builder::BoxedSelectStatement<'_, diesel::sql_types::Text, users::table, _, users::columns::name>`
   |
   = note: required because of the requirements on the impl of `diesel::JoinTo<diesel::query_source::joins::OnClauseWrapper<_, _>>` for `diesel::query_builder::BoxedSelectStatement<'_, diesel::sql_types::Text, users::table, _, users::columns::name>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::JoinWithImplicitOnClause<diesel::query_source::joins::OnClauseWrapper<_, _>, diesel::query_source::joins::Inner>` for `diesel::query_builder::BoxedSelectStatement<'_, diesel::sql_types::Text, users::table, _, users::columns::name>`

error[E0308]: mismatched types
  --> $DIR/boxed_queries_and_group_by.rs:73:21
   |
73 |         .inner_join(posts::table)
   |                     ^^^^^^^^^^^^ expected struct `diesel::query_source::joins::OnClauseWrapper`, found struct `posts::table`
   |
   = note: expected struct `diesel::query_source::joins::OnClauseWrapper<_, _>`
              found struct `posts::table`

error[E0308]: mismatched types
  --> $DIR/boxed_queries_and_group_by.rs:79:9
   |
79 |     a = users::table.group_by(users::id).into_boxed();
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `users::columns::id`
   |
   = note: expected struct `diesel::query_builder::BoxedSelectStatement<'_, _, _, _, ()>`
              found struct `diesel::query_builder::BoxedSelectStatement<'_, _, _, _, users::columns::id>`

error[E0271]: type mismatch resolving `<diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _> as diesel::query_builder::AsQuery>::Query == diesel::query_builder::SelectStatement<diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>>`
  --> $DIR/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ expected struct `diesel::query_builder::BoxedSelectStatement`, found struct `diesel::query_builder::SelectStatement`
   |
   = note: expected type `diesel::query_builder::BoxedSelectStatement<'_, _, _, _, _>`
            found struct `diesel::query_builder::SelectStatement<diesel::query_builder::BoxedSelectStatement<'_, _, _, _, _>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::methods::GroupByDsl<_>` for `diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>`

error[E0277]: the trait bound `diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>: diesel::Table` is not satisfied
  --> $DIR/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ the trait `diesel::Table` is not implemented for `diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>`
   |
   = note: required because of the requirements on the impl of `diesel::query_dsl::methods::GroupByDsl<_>` for `diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>`

error[E0277]: the trait bound `diesel::query_builder::SelectStatement<diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>>: diesel::query_dsl::methods::GroupByDsl<_>` is not satisfied
  --> $DIR/boxed_queries_and_group_by.rs:84:10
   |
84 |         .group_by(users::id)
   |          ^^^^^^^^ the trait `diesel::query_dsl::methods::GroupByDsl<_>` is not implemented for `diesel::query_builder::SelectStatement<diesel::query_builder::BoxedSelectStatement<'_, (diesel::sql_types::Integer, diesel::sql_types::Text), users::table, _>>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::SelectStatement<F, S, D, W, O, LOf, G> as diesel::query_dsl::methods::GroupByDsl<Expr>>
